~ Hacky Fix to scrollbar overlapping content ~ Handling Unkown release status

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #EDF1F5;
+  background-color: #edf1f5;
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
